[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]
